--- a/Colledge/.vscode/launch.json
+++ b/Colledge/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "e:/STORAGE FOR PROGRAMMING 007/Git_Work/Assignment C Programs/Current codespace",
-      "program": "e:/STORAGE FOR PROGRAMMING 007/Git_Work/Assignment C Programs/Current codespace/build/Debug/outDebug",
+      "cwd": "e:/STORAGE FOR PROGRAMMING 007/Git_Work/Assignment C Programs/Colledge",
+      "program": "e:/STORAGE FOR PROGRAMMING 007/Git_Work/Assignment C Programs/Colledge/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
